mysql-test-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: test
  labels:
    tier: test
    app: mysql
spec:
  selector:
    matchLabels:
      tier: test
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        tier: test
        app: mysql
    spec:
      containers:
      - name: mysql-test
        image: mysql:5.6
        resources:
          limits:
            memory: "1Gi"
            cpu: "250m"
        ports:
        - containerPort: 3306
          name: mysql-test-port
        volumeMounts:
        - name: mysql-test-pv
          mountPath: /var/lib/mysql
      volumes:
        - name: mysql-test-pv
          persistentVolumeClaim:
            claimName: mysql-test-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: test
  labels:
    tier: test
    app: mysql
spec:
  selector:
    tier: test
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
