wp-test-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  namespace: test
  labels:
    tier: test
    app: wordpress
spec:
  selector:
    matchLabels:
      tier: test
      app: wordpress
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        tier: test
        app: wordpress
    spec:
      containers:
      - name: wp-test
        image: wordpress:5.6
        resources:
          limits:
            memory: "1Gi"
            cpu: "250m"
        ports:
        - containerPort: 80
          name: wp-test-port
        volumeMounts:
        - name: wordpress-test-pv
          mountPath: /var/www/html
      volumes:
        - name: wordpress-test-pv
          persistentVolumeClaim:
            claimName: wordpress-test-pvc
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - mysql
              topologyKey: kubernetes.io/hostname      
---
apiVersion: v1
kind: Service
metadata:
  name: wp-service
  namespace: test
  labels:
    tier: test
    app: wordpress
spec:
  selector:
    app: wordpress
    tier: test
  ports:
  - port: 80
    targetPort: 80
