ingress-test-prod.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress-test
  labels:
    tier: test
    app: wordpress
  namespace: test
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: testblog.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wp-service
            port:
              number: 80
---
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress-production
  labels:
    tier: production
    app: wordpress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: companyblog.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wp-service
            port:
              number: 80
